<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorite"/>

    <item
        android:id="@+id/navigation_myprofile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_myprofile"/>

<!--    <item-->
<!--        android:id="@+id/action_reminder"-->
<!--        android:title="Reminder Settings"-->
<!--        app:showAsAction="never"/>-->

</menu>