<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009"/>

    <TextView
            android:id="@+id/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/img_user_photo"
            tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txt_user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_name"
        tools:layout_editor_absoluteX="0dp" />

    <ImageView
        android:id="@+id/img_user_location"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/icon_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_id" />

    <TextView
        android:id="@+id/txt_user_location"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_user_location"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_id" />

    <ImageView
        android:id="@+id/img_user_company"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_company"
        android:src="@drawable/ic_baseline_work_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user_location" />

    <TextView
        android:id="@+id/txt_user_company"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_user_company"
        app:layout_constraintTop_toBottomOf="@id/txt_user_location" />

    <ImageView
        android:id="@+id/img_user_repository"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/icon_repository"
        android:src="@drawable/ic_baseline_library_books_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user_company" />

    <TextView
        android:id="@+id/txt_user_repository"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_user_repository"
        app:layout_constraintTop_toBottomOf="@id/txt_user_company" />

    <ImageView
        android:id="@+id/img_user_follow"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/icon_following_followers"
        android:src="@drawable/ic_baseline_people_alt_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_user_repository" />

    <TextView
        android:id="@+id/txt_user_following"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:textAlignment="inherit"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.622"
        app:layout_constraintStart_toEndOf="@+id/txt_user_follower"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_repository" />

    <TextView
        android:id="@+id/txt_user_follower"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:textAlignment="inherit"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/img_user_follow"
        app:layout_constraintTop_toBottomOf="@id/txt_user_repository" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="?attr/colorSecondary"
        app:layout_constraintTop_toBottomOf="@id/txt_user_follower"
        app:tabTextColor="@color/black"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tablayout">
    </androidx.viewpager2.widget.ViewPager2>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="100dp"
        android:elevation="5dp"
        android:src="@drawable/ic_favorite"
        android:background="@drawable/fab_favorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/img_user_photo"
        app:layout_constraintTop_toTopOf="@+id/img_user_photo"
        app:pressedTranslationZ="12dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

