<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="182dp"
        android:layout_marginEnd="182dp"
        android:gravity="center" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_user_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_toEndOf="@+id/img_user_photo"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>
            <TextView
                android:id="@+id/tbFollowerNumb"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center" />

            <TextView
                android:id="@+id/tbFollowingNumb"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tbFollowers"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Followers" />

            <TextView
                android:id="@+id/tbFollowing"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Following" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txt_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="12dp"
        android:padding="2dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img_user_photo"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/txt_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="12dp"
        android:padding="2dp"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_user_name"
        tools:layout_editor_absoluteX="0dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="150dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>
            <ImageView
                android:id="@+id/img_user_location"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="2dp"
                android:contentDescription="@string/icon_location"
                android:src="@drawable/ic_baseline_public_24"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_user_location"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:padding="2dp"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>
            <ImageView
                android:id="@+id/img_user_company"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="2dp"
                android:contentDescription="@string/icon_company"
                android:src="@drawable/ic_baseline_work_24"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_user_company"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:padding="2dp"
                android:textSize="14sp" />
        </TableRow>

        <TableRow>
            <ImageView
                android:id="@+id/img_user_repository"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:padding="2dp"
                android:contentDescription="@string/icon_repository"
                android:src="@drawable/ic_baseline_library_books_24"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/txt_user_repository"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="4dp"
                android:padding="2dp"
                android:textSize="14sp" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:background="?attr/colorSecondary"
        app:tabTextColor="@color/black"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@+id/tablayout"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/tablayout"
        app:layout_constraintVertical_bias="0.0">

    </androidx.viewpager2.widget.ViewPager2>

</RelativeLayout>

